# JEngine

./: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Config/: imgui.ini
Engine/Shaders/: Blinn-phong.glsl  Geometry.glsl  PBR.glsl  PBRandIBL.glsl
Engine/Shaders/Caches/OpenGL/: SkyBox.glsl.cached_opengl.frag  SkyBox.glsl.cached_opengl.vert  SkyBox.glsl.cached_vulkan.frag  SkyBox.glsl.cached_vulkan.vert
Engine/Source/: main.cpp
Engine/Source/Editor/: EditorLayer.cpp  EditorLayer.h  UI.cpp
Engine/Source/Editor/ImGuiWrapper/: ImGuiWrapper.cpp  ImGuiWrapper.h
Engine/Source/Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
Engine/Source/Editor/Test/: RawLayer.cpp  RawLayer.h
Engine/Source/Runtime/: JEngine.h
Engine/Source/Runtime/Application/Camera/: Camera.hpp  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Engine/Source/Runtime/Application/EcsFramework/Component/: ComponentBase.h  ComponentConcept.h  ComponentGroup.h
Engine/Source/Runtime/Application/EcsFramework/Component/Basic/: IDComponent.h  TagComponent.cpp  TagComponent.h
Engine/Source/Runtime/Application/EcsFramework/Component/Camera/: CameraComponent.h
Engine/Source/Runtime/Application/EcsFramework/Component/Light/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  PointLightComponent.cpp  PointLightComponent.h
Engine/Source/Runtime/Application/EcsFramework/Component/Mesh/: MeshComponent.cpp  MeshComponent.h
Engine/Source/Runtime/Application/EcsFramework/Component/Shape/: CircleRendererComponent.h  SpriteRendererComponent.h
Engine/Source/Runtime/Application/EcsFramework/Component/Transform/: TransformComponent.cpp  TransformComponent.h
Engine/Source/Runtime/Application/EcsFramework/Entity/: Entity.cpp  Entity.h
Engine/Source/Runtime/Application/EcsFramework/Level/: Level.cpp  Level.h
Engine/Source/Runtime/Application/EcsFramework/Registry/: Registry.h
Engine/Source/Runtime/Application/EcsFramework/System/: System.h  SystemGroup.h
Engine/Source/Runtime/Application/EcsFramework/System/Render/: EnvironmentSystem.cpp  EnvironmentSystem.h  RenderSystem3D.cpp  RenderSystem3D.h
Engine/Source/Runtime/Application/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/Runtime/Application/Framework/: Application.cpp  Application.h  Layer.hpp  LayerStack.cpp  LayerStack.h  Window.hpp
Engine/Source/Runtime/Application/Geometry/: Geometry.cpp  Geometry.h  GeometryRenderer.cpp  GeometryRenderer.h
Engine/Source/Runtime/Application/Imgui/: ImguiLayer.cpp  ImguiLayer.h
Engine/Source/Runtime/Application/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Engine/Source/Runtime/Application/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Engine/Source/Runtime/Application/Renderer/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Source/Runtime/Application/Utils/: MathUtils.cpp  MathUtils.h  WindowsPlatformUtils.cpp  WindowsPlatformUtils.h
Engine/Source/Runtime/Core/Base/: Assert.h  Base.h  Header.h  PublicSingleton.h
Engine/Source/Runtime/Core/Log/: Log.cpp  Log.h
Engine/Source/Runtime/Core/Math/: Math.hpp
Engine/Source/Runtime/Core/Utils/: Timestep.hpp  UUID.cpp  UUID.h
Engine/Source/Runtime/Platform/OpenGL/: NativeOpenGLShader.cpp  NativeOpenGLShader.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPostProcessing.cpp  OpenGLPostProcessing.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Runtime/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Runtime/Resource/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  IconManager.cpp  IconManager.h  ModeManager.cpp  ModeManager.h
